Created a valid web page and also added Project 1 handout

--- a/practice/html/week_1/firstwebpage.html
+++ b/practice/html/week_1/firstwebpage.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <p>Hello there</p>
 
 <!-- 2 different types of HTML Elements. Tags are the opening and closing tags. An element is made up of both opening and closing tag.-->
@@ -30,4 +31,6 @@
 <br>
 <br>
 <!-- Anchor Tags used for linking to other parts of the webpage or other webpages -->
-<button style="background-color: yellow;"><a href="http://www.google.com" target="_blank">Click here to go to google</a></button>
+<button style="background-color: yellow;"><a href="http://www.google.com" download target="_blank">Click here to go to google</a></button>
+
+
