went over css selectors and rules with Eduardo. Also created my hobby index page so I can begin to write content on it.

--- a/projects/hobby/index.html
+++ b/projects/hobby/index.html
@@ -2,5 +2,19 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <title>Vladimir's Hobby Page</title>
+        <meta name="description" content="Ever wanted to travel around the world? If so on
+         my site you will learn how to travel around the world cheaply and safe.">
+         <meta name="author" content="Vladimir Parrales">
+         <link rel="stylesheet" href="#">
     </head>
+    <body>
+        <h1>Everyday is an Adventure here!</h1>
+        <p>Hello! My name is Vladimir and I am here to talk about how to travel around the world.
+            I took my first trip around the world in 2019. Up until now it was the best time of my
+            life! If you have the opportunity to travel and explore different countries around the world, 
+            I say take the opportunity</p>
+
+        <p>There are several reasons why I enjoy traveling. To begin you feel FREE! 
+    </body>
 </html>
