Expanded the three paragraphs further

--- a/projects/hobby/index.html
+++ b/projects/hobby/index.html
@@ -26,25 +26,28 @@
             prefer warm and hot climates. It is also a good idea to travel light. Preferrably a backpack that you can carry on. 
             I traveled around the world with a 5kg (approx 11 lbs) backpack. Another important thing to bring on your trip is 
             a smartphone. Technology today makes traveling much easier. Make sure that your smartphone is unlocked or jaibroken. 
-            Download these apps and create accounts so you cam make traveling fun! I suggest setting up your accounts in advance before
-            leaving on the trip. 
-            Currency Converter, 
-            whatsApp, 
-            skype, 
-            venmo,
-             lyft,
-              uber, 
-              agoda,
-               booking, 
-               airbnb, 
-               hostelworld, 
-               couchsurfing,
-               tripAdvisor,
-            KAYAK, 
-            Skyscanner,
-             google maps
-             and your email. All of these apps are going to help with communication, research, finance and 
-            accomedations. One last tip are the following sites. These sites allow you to find work while you travel anywhere in the world.
+            Download the following apps and create accounts so you can be prepared while traveling! I suggest setting up your accounts in advance before
+            leaving on the trip.</p>
+            <ul>
+                <li>Currency Converter,</li> 
+            <li>whatsApp, </li>
+                <li>skype, </li>
+                    <li>venmo,</li>
+                        <li> lyft,</li>
+                            <li>uber, </li>
+                                <li> agoda,</li>
+                                    <li> booking, </li>
+                                        <li>airbnb, </li>
+                                            <li>hostelworld, </li>
+                                                <li>couchsurfing,</li>
+                                                    <li> tripAdvisor,</li>
+                                                        <li>KAYAK, </li>
+                                                            <li> Skyscanner,</li>
+                                                                <li> google maps</li>
+                                                                <li> email</li>
+            </ul>
+             <p>All of these apps are going to help with research, communication, finance,
+            accomedations and much more. One last tip are the following sites. These sites allow you to find work while you travel anywhere in the world.
 
             interdTo some degree this is a form of networking. I am here to talk about how to travel around the world. Traveling is fun!
             If 
