working on layouts and added a picture for my hobby site

--- a/projects/hobby/index.html
+++ b/projects/hobby/index.html
@@ -66,5 +66,7 @@
             20 WAYS TO TRAVEL AROUND THE WORLD FOR CHEAP OR EVEN FREE</a>In the end you will have created memories that will last a life time!
             
             There are several reasons why I enjoy traveling. To begin you feel FREE! </p>
+
+            <img src="zakynthos5_small.jpg" alt="Swimming in Greece">
     </body>
 </html>
