--- a/practice/css/week_2/layout.html
+++ b/practice/css/week_2/layout.html
@@ -11,6 +11,9 @@
           background-color: chocolate;
           color: cornsilk;
           padding: 40px;
+          width: 900px;
+          margin: 0 auto;
+          box-sizing: border-box;
          
       }
 
@@ -27,14 +30,25 @@
           height: 400px;
           border: solid 10px orange;
           border-radius: 50px;
-          margin: 100px;
-          padding-left: 40px;
+          margin: 100px auto;
+          padding-left: 0;
+          width: 880px;
+          box-sizing: border-box;
+      }#main div {
+          height: 100px;
+          background-color: darksalmon;
+          margin-bottom: 10px;
       }
+
+
 
       #footer {
           background-color: black;
           color: limegreen;
           padding: 20px;
+          width: 900px;
+          margin: 0 auto;
+          box-sizing: border-box;
       }
 
       #footer p {
@@ -72,18 +86,27 @@
       #food-list {
           list-style-type: none;
           background-color: greenyellow;
-          text-align: center;
-          box-sizing: border-box;
-          margin: 0 auto;
+         padding-left: 0;
+        width: 900px;
+        margin: 0 auto;
 
       }
 
       #food-list li {
           display: inline-block;
           background-color: yellow;
+          margin: 10px;
+          width: 57px;
+          overflow: hidden;
          
           /* padding: 10px; */
           /* box-sizing: border-box; */
+      }
+
+      #videos {
+          width: 900px;
+          margin: 0 auto;
+           box-sizing: border-box;
       }
   </style>
 
@@ -104,6 +127,8 @@
 
  <div id="main">
      <p>This area is the second div.</p>
+     <div></div>
+     <div></div>
  </div>
  
  <!-- HTML5 version is <footer> </footer> -->
@@ -127,5 +152,9 @@
      <li>Steak</li>
      <li>Algae</li>
  </ul>
+ <div id="videos"><iframe width="900" height="315" src="https://www.youtube.com/embed/iuIySUX3MBk" 
+    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+     allowfullscreen></iframe>
+ </div>
 </body>
 </html>
