worked on CSS importance.

--- a/practice/css/week_2/layout.html
+++ b/practice/css/week_2/layout.html
@@ -51,6 +51,8 @@
           margin: 0 auto 10px auto;
           border-radius: 15px;
           overflow: auto;
+          background-image: url("divbg.jpg");
+          background-size: cover;
           /* margin-top: 20px; */
       }
 
