added photos and edited content for hobby page

--- a/practice/css/week_2/layout.html
+++ b/practice/css/week_2/layout.html
@@ -94,6 +94,18 @@
 
       }
 
+      #footer .footer-columns {
+          width: 33%;
+          height: 200px;
+          background-color: darkorchid;
+          display: inline-block;
+          border: solid 2px red;
+          box-sizing: border-box;
+
+
+      }
+
+
 
       #footer h6 {
           color: cornsilk;
@@ -186,6 +198,12 @@
  <!-- HTML5 version is <footer> </footer> -->
 
  <div id="footer">
+
+    <div class= "footer-columns" id="footer-left">
+    </div><div class= "footer-columns" id="footer-center">
+    </div><div class= "footer-columns" id="footer-right">
+    </div>
+
      <p>&copy; 2020 <span id="myname">Vladimir</span> Parrales</p>  
     <h6>This is also tiny text as well.</h6>
      <div>
