--- a/projects/hobby/index.html
+++ b/projects/hobby/index.html
@@ -15,24 +15,24 @@
     <link rel="stylesheet" href="#">
 
     <!-- Add jQuery library -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
 
     <!-- Add mousewheel plugin (this is optional) -->
-    <script type="text/javascript" src="fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
+    <script src="fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
 
     <!-- Add fancyBox -->
     <link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.7" type="text/css" media="screen" />
-    <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.7"></script>
+    <script src="fancybox/source/jquery.fancybox.pack.js?v=2.1.7"></script>
 
     <!-- Optionally add helpers - button, thumbnail and/or media -->
     <link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css"
         media="screen" />
-    <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
-    <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
+    <script src="fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
+    <script src="fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
 
     <link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css"
         media="screen" />
-    <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
+    <script src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
     <style>
         * {
             box-sizing: border-box;
@@ -93,7 +93,7 @@
             margin: 2px;
             padding: 0;
             overflow: hidden;
-            background-color: #3C5C79;
+            background-color: #111;
         }
 
         nav li a {
@@ -110,7 +110,7 @@
 
         nav li>a:hover {
             background-color: #111;
-            color: teal;
+            color: tomato;
         }
 
         /* LINK STYLES */
@@ -191,92 +191,76 @@
             </ul>
         </nav>
         <header>
-            <h1>Everyday is an Adventure!</h1>
+            <div id="headerstyles">
+            <img src="hvar10_small.jpg" alt="" width="958" height="400">
+            <h1>Everyday should be an Adventure!</h1>
+            </div>
         </header>
         <main>
             <h2>A little bit about me</h2>
-            <p class="paragraph-style">Hello! My name is Vladimir and I live in San Francisco. What if everyday was and
+            <p class="paragraph-style">Hello! My name is Vladimir and I live in San Francisco California. What if everyday was and
                 adventure? If that
                 question sparks any wonder of possibilities, well let one of those possibilities be travel. Travel is
                 fun! It makes your
-                life more rich and full of experiences. I enjoy doing it because I learn a lot about Geography,
-                Politics, people,
-                cultures, nature and food. Not only is learning part of the adventure, but you experience different
+                life more rich and full of experiences. I enjoy doing it because I learn a lot about geography,
+                politics, people, cultures, nature and food. Not only is learning part of the experience and adventure, but you also experience different
                 flavors of food and get to have friends all over the world! You are exposed to all sorts of environments
-                and sometimes you will feel completely out of place, but don't worry its really fun. You feel alive,
-                present and have that kid
-                wonder in you. Aside from all, traveling around the world alone helps develope interdiciplinary
+                and sometimes you will feel completely out of place, but don't worry its really fun! You feel alive,
+                present and have that kid wonder in you. Aside from all, traveling around the world alone helps develope interdiciplinary
                 skills. And to top it all off, traveling gives the opportunity and possibility of networking around the
                 world!
             </p>
             <h2>Tips on Travel</h2>
-            <p class="paragraph-style">Here are a few guide lines on how to travel safely and cheaply. So the first
-                thing to do is a lot of
-                really good research. Research
-                the country and region that you will visit. Consider the weather. Make sure you check the weather before
+            <p class="paragraph-style">Here are a few guide lines on how to travel safely and cheaply. The first
+                thing to do is a lot of research. Research the country and region that you will visit. Consider the weather. Make sure you check the weather before
                 you go. Don't show up
                 packed with summer clothes and its snowing. Its good to know how the weather is going to be.
                 If you decide to travel extensively for months try to go to places with similiar climates. I personaly
                 prefer warm and hot climates. It is also a good idea to travel light. Preferrably a backpack that you
-                can carry on.
+                can carry on the plane.
                 I traveled around the world with a 5kg (approx 11 lbs) backpack. Another important thing to bring on
                 your trip is
                 a smartphone. Technology today makes traveling much easier. Make sure that your smartphone is unlocked
-                or jaibroken.
-                Download the following apps and create accounts so you can be prepared while traveling! I suggest
-                setting up your accounts in advance before
-                leaving on the trip.</p>
+                or jaibroken otherwise it probably won't work in different parts of the world.
+                Download the following apps and create accounts to have options while traveling! I suggest
+                setting up your accounts in advance before leaving on the trip.</p>
 
             <h2>Helpful Travel Apps</h2>
             <ul class="applist">
-                <li>Currency Converter,</li>
-                <li>whatsApp, </li>
-                <li>skype, </li>
-                <li>venmo,</li>
-                <li> lyft,</li>
-                <li>uber, </li>
-                <li> agoda,</li>
-                <li> booking, </li>
-                <li>airbnb, </li>
-                <li>hostelworld, </li>
-                <li>couchsurfing,</li>
-                <li> tripAdvisor,</li>
-                <li>KAYAK, </li>
-                <li> Skyscanner,</li>
-                <li> google maps</li>
-                <li> email</li>
+                <li>Oanda Currency Converter</li>
+                <li>WhatsApp</li>
+                <li>Skype</li>
+                <li>Venmo</li>
+                <li> Lyft</li>
+                <li>Uber</li>
+                <li>Agoda</li>
+                <li>Booking</li>
+                <li>Airbnb</li>
+                <li>Hostelworld</li>
+                <li>Couchsurfing</li>
+                <li>TripAdvisor</li>
+                <li>KAYAK</li>
+                <li>Skyscanner</li>
+                <li>Google Maps</li>
+                <li>Email</li>
             </ul>
             <p class="paragraph-style">All of these apps are going to help with research, communication, finance,
                 accomedations and much more. One last tip are the following sites. These sites allow you to find work
-                while you travel anywhere in the world.
-
-                interdTo some degree this is a form of networking. I am here to talk about how to travel around the
-                world. Traveling is fun!
-                If
-                I took my first trip around the world in 2019. Up until now it was the best time of my
-                life! If you have the opportunity to travel and explore different countries around the world,
-                I say take the opportunity</p>
+                while you travel anywhere in the world! If you have the opportunity to travel and explore different countries around the world,
+                take the opportunity you will not regret it.</p>
 
             <h2>Additional Tips and Other Online Resources</h2>
 
-            <p class="paragraph-style">Another important thing to bting along is an international driving permit. Having
-                it will allow driving
-                different types of motor
-                vehicles like cars, bikes and scooters. You can pick up an international driving permit at a AAA office.
-                You will have to fill
-                out an application and provide two passport photos. Passport photos can be taken at Walgreens. Take a
-                look at the following article
-                it is a great read that provides lots of good information about earning money while traveling. <a
-                    href="https://expertvagabond.com/best-travel-jobs/" target="_blank" rel="noopener">
-                    40 Best Travel Jobs To Make Money Traveling The World</a> <a href="https://www.workaway.info/"
-                    target="_blank" rel="noopener">Workaway</a> opens the doors to lots of
-                possibilities in the world! Another site worth checking out is <a href="https://wwoof.net/"
-                    target="_blank" rel="noopener">WWOOF</a> It
-                is about living and learning about
-                organic farming all over the world. <a href="https://www.helpx.net/" target="_blank"
-                    rel="noopener">helpx</a> is another similar
-                website similar to
-                workaway and WWOOF. Lasty this article provides ways to travel the world cheap or in some cases free. <a
+            <p class="paragraph-style">Another important thing to bring along is an international driving permit. Having
+                it will allow driving different types of motor vehicles like cars, bikes and scooters. You can pick up an
+                international driving permit at a AAA office. You will have to fill out an application and provide two passport
+                photos. Passport photos can be taken at Walgreens. Take a look at the following article it is a great read that
+                provides lots of good information about earning money while traveling. <a href="https://expertvagabond.com/best-travel-jobs/" 
+                target="_blank" rel="noopener">40 Best Travel Jobs To Make Money Traveling The World</a> <a href="https://www.workaway.info/"
+                target="_blank" rel="noopener">Workaway</a> opens the doors to lots of possibilities in the world! Another site worth checking 
+                out is <a href="https://wwoof.net/" target="_blank" rel="noopener">WWOOF</a> It is about living and learning about
+                organic farming all over the world. <a href="https://www.helpx.net/" target="_blank" rel="noopener">helpx</a> is another similar
+                website similar to workaway and WWOOF. Lasty this article provides ways to travel the world cheap or in some cases free. <a
                     href="https://www.gosciencefinance.com/20-ways-travel-around-world-cheap-even-free/" target="_blank"
                     rel="noopener">
                     20 WAYS TO TRAVEL AROUND THE WORLD FOR CHEAP OR EVEN FREE</a>In the end you will have created
@@ -319,8 +303,8 @@
             <a class="fancybox" href="palestine9_small.jpg" data-fancybox-group="gallery"
                 title="The Walled Off Hotel, Palestine"><img src="palestine9_small.jpg" width="300" height="300"
                     alt="The Walled Off Hotel, Palestine"></a>
-            <a class="fancybox" href="hvar10_small.jpg" data-fancybox-group="gallery"
-                title="Town center Hvar, Croatia"><img src="hvar10_small.jpg" width="300" height="300"
+            <a class="fancybox" href="hvar10_small1.jpg" data-fancybox-group="gallery"
+                title="Town center Hvar, Croatia"><img src="hvar10_small1.jpg" width="300" height="300"
                     alt="Town center Hvar, Croatia"></a>
             <a class="fancybox" href="italianfoods3_small.jpg" data-fancybox-group="gallery"
                 title="Italian Vegan Sandwhich Meta Campania, Italy"> <img src="italianfoods3_small.jpg" width="300"
