added new photos and created a reset css file

--- a/practice/css/week_2/layout.html
+++ b/practice/css/week_2/layout.html
@@ -3,10 +3,25 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  
+  <link rel="stylesheet" href="myspecialcss.css">
+  <link rel="stylesheet" href="reset.css">
+  <style>
+      h1 {
+          font-size: 72px;
+      }
+
+      p {
+          border: solid 2px fuchsia;
+          width: 600px;
+          margin: 40px auto;
+      }
+      </style>
+  
 
   <title>Layout</title>
  
-  <style>
+  <!-- <style>
       body {
           background-color: lightslategray;
           background-image: url("bg.jpg");
@@ -158,7 +173,7 @@
           margin: 0 auto;
            box-sizing: border-box;
       }
-  </style>
+  </style> -->
 
 
 </head>
