--- a/projects/hobby/index.html
+++ b/projects/hobby/index.html
@@ -273,8 +273,8 @@
             <a class="fancybox" href="bc8_small.jpg" data-fancybox-group="gallery"
                 title="La Sagrada Familia Catalonia, Spain"><img src="bc8_small.jpg" width="300" height="300"
                     alt="La Sagrada Familia "></a>
-            <a class="fancybox" href="bc3_small.jpg" data-fancybox-group="gallery"
-                title="Protest in Catalonia, Spain"><img src="bc3_small.jpg" width="300" height="300"
+            <a class="fancybox" href="bc3_small1.jpg" data-fancybox-group="gallery"
+                title="Protest in Catalonia, Spain"><img src="bc3_small1.jpg" width="300" height="300"
                     alt="Protest in Catalonia, Spain"></a>
             <a class="fancybox" href="Bangkok15_small.jpg" data-fancybox-group="gallery"
                 title="Tuk Tuk in Bangkok, Thailand"><img src="Bangkok15_small.jpg" width="300" height="300"
