added details to the footer

--- a/projects/hobby/index.html
+++ b/projects/hobby/index.html
@@ -131,6 +131,7 @@
         <footer>
             <ul>
                 <li><a href="https://github.com/vparrales" target="_blank" rel="noopener">Github</a>
+                    <p>Copyright &copy; Spring 2020 Mission Techies | Vladimir Parrales</p>
             </ul>
         </footer>
     </div>
