retrieved images from the internet related to my hobby so I can upload to site

--- a/projects/hobby/index.html
+++ b/projects/hobby/index.html
@@ -127,6 +127,16 @@
             <img src="bc10_small1.jpg" width="300" height="300" alt="Gaudi Park, Barcelona, Spain">
             
             <img src="izmir5_small1.jpg" width="300" height="300" alt="Lots and lots of Olives, Izmir, Turkey">
+
+            <img src="panoramic.jpg" width="500" height="300" alt="Pexels image of town by water">
+
+            <img src="airplane.jpg" width="500" height="300" alt="Pexels image of early flight">
+
+            <img src="pinkteal.jpg" width="400" height="500" alt="Pexels Only leave foot prints please.">
+            
+            <img src="bangkokair.jpg" width="600" height="400" alt="Pexels Bangkok Air in flight">
+
+            <img src="vwomen.jpg" width="400" height="300" alt="Pexels Orientals in VW van">
         </main>
         <footer>
             <ul>
