added content in appendix

--- a/projects/hobby/index.html
+++ b/projects/hobby/index.html
@@ -142,6 +142,26 @@
             <img src="bangkokair.jpg" width="600" height="400" alt="Pexels Bangkok Air in flight">
 
             <img src="vwomen.jpg" width="400" height="300" alt="Pexels Orientals in VW van">
+
+            <h2>Appendix</h2>
+            <p>Her is a list of references and articles that I cited during my process of making this page.</p>
+            <ul>
+            <li>
+            <a href="https://expertvagabond.com/best-travel-jobs/" target="_blank" rel="noopener">40 Best Travel Jobs</a>
+            </li>
+            <li>
+            <a href="https://www.workaway.info/" target="_blank" rel="noopener">Workaway</a>
+            </li>
+            <li>
+            <a href="https://wwoof.net/" target="_blank" rel="noopener">WWOOF</a>
+            </li>
+            <li>
+            <a href="https://www.helpx.net/" target="_blank" rel="noopener">helpx</a>
+            </li>
+            <li>
+            <a href="https://www.gosciencefinance.com/20-ways-travel-around-world-cheap-even-free/" target="_blank" rel="noopener">20 Ways to Travel Around the World</a>
+            </li>
+        </ul>
         </main>
         <footer>
             <ul>
