gave credit to photos from pexels

--- a/projects/hobby/index.html
+++ b/projects/hobby/index.html
@@ -161,6 +161,21 @@
             <li>
             <a href="https://www.gosciencefinance.com/20-ways-travel-around-world-cheap-even-free/" target="_blank" rel="noopener">20 Ways to Travel Around the World</a>
             </li>
+            <li>
+            <a href="https://www.pexels.com/photo/panoramic-view-of-sea-against-blue-sky-248771/" target="_blank" rel="noopener">Pexel Image sea against blue sky (Label free for reuse Pexels image).</a>
+            </li>
+            <li>
+            <a href="https://www.pexels.com/photo/photography-of-airplane-during-sunrise-723240/" target="_blank" rel="noopener">Pexel airplane sunrise (Label free for reuse Pexels image).</a>
+            </li>
+            <li>
+            <a href="https://www.pexels.com/photo/pink-teal-yellow-multi-color-please-leave-nothing-but-your-feet-road-signage-164287/" target="_blank" rel="noopener">Pexel only foot print allowed. (Label free for reuse Pexels image)</a>
+            </li>
+            <li>
+            <a href="https://www.pexels.com/photo/white-and-blue-passenger-airplane-aerial-photography-1004584/" target="_blank" rel="noopener">Bangkok airlines. (Label free for reuse Pexels image)</a>
+            </li>
+            <li>
+            <a href="https://www.pexels.com/photo/women-inside-a-van-2101528/" target="_blank" rel="noopener">Oriental women inside a van. (Label free for reuse Pexels image)</a>
+            </li>
         </ul>
         </main>
         <footer>
