--- a/practice/html/week_3/html5sections.html
+++ b/practice/html/week_3/html5sections.html
@@ -36,7 +36,7 @@
     navigation nenu -->
       <nav></nav>
   </header>
-
+<!-- Generally hold the main content of the webpage. -->
   <maim>
       <article>
           <header>
