--- a/practice/html/week_4/multipage-css/index.html
+++ b/practice/html/week_4/multipage-css/index.html
@@ -13,15 +13,15 @@
 <body>
   
     <header>
-        <img id="logo" src="images/logo.png" alt="SF Posh Gallery" width="150" height="150">
+        <div><a href="index.html"><img id="logo" src="images/logo.png" alt="SF Posh Gallery" width="150" height="150"></a></div>
         <div id="title-container">
         <h1><span id="custom-height">Welcome to</span> <br>San Francisco's<br> Posh Gallery</h1>
         </div>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Gallery</li>
-                <li>Contact & Location</li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Contact & Location</a></li>
             </ul>
         </nav>
     </header>
