worked on footer and put social media icons by using the site fontawesome.com

--- a/practice/html/week_4/multipage-css/index.html
+++ b/practice/html/week_4/multipage-css/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, intial-scale=1">
   <title>San Francisco's Posh Gallery | First Page</title>
   <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="styles/all.min.css">
   <link rel="stylesheet" href="styles/styles.css">
-
+  
 </head>
 
 <body>
@@ -34,16 +35,15 @@
 
     <footer>
         <div></div>
-
-        <section>
-            <p>Copyright &copy; 2020 San Francisco's Posh Gallery</p>
+        <section id="social-links">
+            <ul>
+                <li><i class="fab fa-github"></i>&nbsp;<a href="https://github.com">GitHub</a></li>
+                <li><i class="fab fa-instagram"></i>&nbsp;<a href="https://instagram.com">Instagram</a></li>
+                <li><i class="fab fa-flickr"></i>&nbsp;<a href="https://flickr.com">Flickr</a></li>
+            </ul>
         </section>
         <section>
-            <ul>
-                <li>GitHub</li>
-                <li>Instagram</li>
-                <li>Flikr</li>
-            </ul>
+            <p id="copyright">Copyright &copy; 2020 San Francisco's Posh Gallery</p>
         </section>
     </footer>
 </body>
