--- a/practice/html/week_4/multipage-css/index.html
+++ b/practice/html/week_4/multipage-css/index.html
@@ -37,9 +37,9 @@
         <div></div>
         <section id="social-links">
             <ul>
-                <li><i class="fab fa-github"></i>&nbsp;<a href="https://github.com">GitHub</a></li>
-                <li><i class="fab fa-instagram"></i>&nbsp;<a href="https://instagram.com">Instagram</a></li>
-                <li><i class="fab fa-flickr"></i>&nbsp;<a href="https://flickr.com">Flickr</a></li>
+                <li><a href="https://github.com"><i class="fab fa-github"></i> GitHub</a></li>
+                <li><a href="https://instagram.com"> <i class="fab fa-instagram"></i> Instagram</a></li>
+                <li><a href="https://flickr.com"><i class="fab fa-flickr"></i> Flickr</a></li>
             </ul>
         </section>
         <section>
