worked on the other pages contact and form

--- a/practice/html/week_4/multipage-css/index.html
+++ b/practice/html/week_4/multipage-css/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, intial-scale=1">
-  <title>San Francisco's Posh Gallery | First Page</title>
+  <title>SF's Posh Gallery | Homepage</title>
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/all.min.css">
   <link rel="stylesheet" href="styles/styles.css">
@@ -21,16 +21,51 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Contact & Location</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="contact.html">Contact & Location</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <div>
-            <h1>This is where the main content will go.</h1>
-        </div>
+    <main id="homepage">
+            <h1>Welcome!</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget lacus tortor. 
+                Nulla facilisi. Sed sit amet nunc iaculis ante condimentum aliquam eu vel dolor. Curabitur
+                 nulla erat, euismod vitae tincidunt vel, bibendum id metus. Maecenas faucibus ultricies erat,
+                  nec auctor nisl tincidunt quis. Phasellus luctus enim vitae lobortis sodales. Proin pharetra 
+                  dui viverra placerat imperdiet. Phasellus a odio et sem molestie lobortis ut sed sem. Duis vitae
+                   nibh non velit eleifend tristique vitae vel leo. Nunc molestie vestibulum tortor, ornare finibus 
+                   dolor consectetur eu. Pellentesque lobortis sem sed lobortis pulvinar. Maecenas a volutpat dolor, 
+                   nec vehicula urna. Cras at sapien ac nisl tempus vehicula. Nunc ultricies, mauris ut posuere ornare, 
+                   risus eros malesuada neque, vel sodales lorem lacus quis leo.
+            </p>
+
+            <p>
+                Vivamus vitae odio fermentum, eleifend metus eget, faucibus risus. Fusce ut venenatis sapien, at faucibus 
+                est. Pellentesque volutpat diam vel nulla vestibulum, et aliquet elit eleifend. Suspendisse suscipit rutrum 
+                velit vitae volutpat. Pellentesque libero odio, maximus sit amet libero eget, lobortis interdum ligula. Cras 
+                vel ultricies velit. Donec vel erat suscipit, scelerisque ipsum tincidunt, blandit augue. Nullam posuere ultricies
+                arcu, eget facilisis nisi tristique vel.
+            </p>
+
+            <h1>The coolest place on Earth</h1>
+            <p>
+                Vivamus vitae odio fermentum, eleifend metus eget, faucibus risus. Fusce ut venenatis sapien, at faucibus 
+                est. Pellentesque volutpat diam vel nulla vestibulum, et aliquet elit eleifend. Suspendisse suscipit rutrum 
+                velit vitae volutpat. Pellentesque libero odio, maximus sit amet libero eget, lobortis interdum ligula. Cras 
+                vel ultricies velit. Donec vel erat suscipit, scelerisque ipsum tincidunt, blandit augue. Nullam posuere ultricies
+                arcu, eget facilisis nisi tristique vel.
+            </p>
+
+            <h1>Low price of $15,000 a month</h1>
+
+            <p>
+                Vivamus vitae odio fermentum, eleifend metus eget, faucibus risus. Fusce ut venenatis sapien, at faucibus 
+                est. Pellentesque volutpat diam vel nulla vestibulum, et aliquet elit eleifend. Suspendisse suscipit rutrum 
+                velit vitae volutpat. Pellentesque libero odio, maximus sit amet libero eget, lobortis interdum ligula. Cras 
+                vel ultricies velit. Donec vel erat suscipit, scelerisque ipsum tincidunt, blandit augue. Nullam posuere ultricies
+                arcu, eget facilisis nisi tristique vel.
+            </p>
     </main>
 
     <footer>
