worked on styles for multipage contact page

--- a/practice/html/week_4/multipage-css/contact.html
+++ b/practice/html/week_4/multipage-css/contact.html
@@ -28,20 +28,37 @@
     </header>
 
     <main id="contact">
+        <h1>Contact Us! Only $5.99 + S&H + Tax. 11% per message.</h1>
+        <hr>
 
         <div id="contact-flexbox">
             <!-- div:first-child selects the following: -->
             <div>
-                <form>
-                    <label for="name">Name:</label>
-                    <input type="text" id="name"><br>
-                    <input type="text"><br>
-                    <input type="text"><br>
-                    <textarea></textarea>
+                <form id="contact-form" action="#">
+                    <label for="name">Name:</label><input type="text" id="name"><br>
+                    <label for="email">Email:</label><input type="text" id="email"><br>
+                    <label for="subject">Subject:</label><input type="text" id="subject"><br>
+                    <label for="message">Message:</label><textarea id="message"></textarea><br>
+                    <input class="form-buttons" type="reset">
+                    <input class="form-buttons" type="submit">
+
                 </form>
             </div>
             <!-- div:last-child selects the following: -->
-            <div></div>
+            <div>
+                <dl>
+                    <dt>Address:</dt>
+                    <dd>395 Posh St. San Francisco California, 94110</dd>
+                    <dt>Email Address:</dt>
+                    <dd>
+                        <a href="mailto:reallyposh@poshgallery.com">reallyposh@poshgallery.com</a>
+                    </dd>
+                    <dt>Phone:</dt>
+                    <dd>
+                        <a href="tel:4157597674">(415)RLY-POSH</a>
+                    </dd>
+                </dl>
+            </div>
         </div>
      
     </main>
