--- a/projects/portfolio_docs/contact.html
+++ b/projects/portfolio_docs/contact.html
@@ -35,9 +35,31 @@
                 needs.
             </p>
             <fieldset>
-                <legend>Contact Us<legend>
+                <legend>Contact Us</legend>
+                <form method="POST" action="contact.php" title="Web Design Consultation">
+                    <!-- <label for="firstname">First Name:</label> -->
+                    <br>
+                    <input class="space" type="text" name="firstname" id="firstname" placeholder="First Name" required>
+                    <br>
+                    <!-- <label for="lastname">Last Name:</label> -->
+                    <br>
+                    <input class="space" type="text" name="lastname" id="lastname" placeholder="Last Name" required>
+                    <br>
+                    <!-- <label for="email">Email Address:</label> -->
+                    <br>
+                    <input class="space" type="email" name="email address" id="email" placeholder="email@mail.com" required>
+                    <br>
+                    <br>
+                    <textarea placeholder="Message" rows="10" cols="60"></textarea>
+                    <br>
+                    <input class="submit space" type="submit" value="Submit">
+                    <input class="reset space" type="reset" value="Reset">
+
+                </form>
             </fieldset>
+            </div>
         </main>
+        <br>
         <footer>
             <ul>
                 <li><a href="resume_vladimir.pdf" target="_blank" rel="noopener" class="social resume">Resume</a></li>
