worked on portfolio site

--- a/projects/portfolio_docs/index.html
+++ b/projects/portfolio_docs/index.html
@@ -16,22 +16,26 @@
 
 <body>
     <div id="wrapper">
-        <nav>
-            <a href="index.html" class="brand w-nav-brand">
+        <div>
+            <nav>
+            <!-- <a href="index.html" class="brand w-nav-brand">
                 <img src="vlad.jpg" width="50" height="50" alt="Vladimir">
-            </a>
+            </a> -->
             <ul>
                 <li><a href="contact.html">Contacts</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="index.html" class="nav-link current">Home</a></li>
             </ul>
         </nav>
+        </div>
         <header>
-            <img src="vlad.jpg" width="50" height="50" alt="Vladimir">
+            
+            <!-- <br> -->
             <h1>Vladimir Parrales</h1>
         </header>
         <main>
-            <p class="firstletter maininfo textleft">Hello I am Vladimir, an aspiring web designer. I was born in Nicaragua and I
+            <p class="firstletter maininfo textleft"><img id="vlad" src="vladsmallweb.jpg"width="140" height="170" alt="Vladimir">
+                Hello I am Vladimir, an aspiring web designer. I was born in Nicaragua and I
                 have been living in San Francisco since I was five years old. I love to travel and I enjoy being out
                 doors.
                 When I was in high school I enjoyed running and competing in cross-country and track and field. My
