worked on javascript functions.

--- a/projects/portfolio_docs/contact.html
+++ b/projects/portfolio_docs/contact.html
@@ -10,7 +10,7 @@
   you plan, design, build and package you site to build an online presence">
     <meta name="author" content="Vladimir Parrales">
     <link rel="stylesheet" href="portfolio.css">
-    <link rel="shortcut icon" href="#">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
     <title>Vladimir's Portfolio</title>
 </head>
 
@@ -27,7 +27,8 @@
            
         </header>
         <main>
-            <p class="firstletter">
+            <p class="textleft"><small><a target="_blank" href="https://icons8.com/icons/set/rgb-circle-1">Color Wheel icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></small></p>
+            <p class="firstletter textleft">
                 Interested in creating a website? Get in touch with me by filling out the form below. There are a lot of
                 parts that go into developing a great site. To develop a great site planning with sitemaps and wireframes is the first
                 step. Know that I will go the extra mile in creating the best site for your needs. Take a look at the projects
