--- a/projects/portfolio_docs/index.html
+++ b/projects/portfolio_docs/index.html
@@ -10,7 +10,7 @@
   you plan, design, build and package you site to build an online presence">
     <meta name="author" content="Vladimir Parrales">
     <link rel="stylesheet" href="portfolio.css">
-    <link rel="shortcut icon" href="#">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
     <title>Vladimir's Portfolio</title>
 </head>
 
