worked on css grid to make site mobile friendly

--- a/projects/portfolio_docs/index.html
+++ b/projects/portfolio_docs/index.html
@@ -22,9 +22,11 @@
                 <img src="vlad.jpg" width="50" height="50" alt="Vladimir">
             </a> -->
             <ul>
-                <li><a href="contact.html">Contacts</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                
+                
                 <li><a href="index.html" class="nav-link current">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contacts</a></li>
             </ul>
         </nav>
         </div>
@@ -67,6 +69,8 @@
                 fantastic looking websites. I am a life long learner who is always interested in expanding my skills
                 with a great attitude.
             </p>
+            <p class="textleft"><small><a target="_blank" href="https://icons8.com/icons/set/rgb-circle-1">Color Wheel icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+                <a target="_blank" href="https://icons8.com/icons/set/pdf">PDF icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></small></p>
         </main>
         <footer>
             <ul>
